# LibreMaple-Website

./: .gitignore  README.md  libremaple.cabal
app/: Main.hs
public/: index.html
public/css/: style.css
public/img/: ellinia.xcf
public/js/: main.js  smartquotes.min.js
