name:               libremaple-website
version:            0.1.0
synopsis:           Web server for LibreMaple.
homepage:           https://github.com/Libre-Maple/LibreMaple-Website
license:            AGPL-3
license-file:       LICENSE
author:             Emmy Noether
maintainer:         intransigentms@gmail.com
copyright:          2017 Emmy Noether
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:    base >= 4.7 && < 5
  default-language: Haskell2010

executable libremaple-website
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -O2 -funbox-strict-fields -threaded -rtsopts "-with-rtsopts=-N" -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -fprint-unicode-syntax -fwarn-tabs
  build-depends:      base
                    , libremaple-website
                    , snap-core
                    , snap-server
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/Libre-Maple/LibreMaple-Website
